<resources>
    <string name="app_name">My Github App</string>
    <string name="imageview">ImageView</string>
    <string name="username">Username</string>
    <string name="number">0</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="app">Github</string>
    <string name="toast_add_favorite">Added To Favorite</string>
    <string name="remove_from_favorite">Remove From favorite</string>
</resources>